--- a/packages/html-test-app/src/preview-examples/modal-sizes.html
+++ b/packages/html-test-app/src/preview-examples/modal-sizes.html
@@ -11,22 +11,14 @@ LICENSE file in the root directory of this source tree.
 <html>
   <head>
     <title>Modal sizes</title>
-    <style>
-      .modal-sizes-example {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .modal-sizes-example > * {
-        width: auto;
-        margin: 0.25rem;
-      }
-    </style>
-    <link rel="stylesheet" href="./example.css" />
   </head>
   <body class="theme-classic-dark">
     <!-- Preview code -->
+    <link
+      rel="stylesheet"
+      href="./styles/modal-sizes.css"
+    />
+
     <div class="modal-sizes-example">
       <ix-button data-modal-size="360">Show modal size 360</ix-button>
       <ix-button data-modal-size="480">Show modal size 480</ix-button>
