--- a/packages/html-test-app/src/preview-examples/theme-switcher.html
+++ b/packages/html-test-app/src/preview-examples/theme-switcher.html
@@ -14,13 +14,10 @@ LICENSE file in the root directory of this source tree.
   </head>
   <body class="theme-classic-dark">
     <!-- Preview code -->
-    <style>
-      ix-col {
-        display: flex;
-        align-items: center;
-        height: 2.5rem;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="./styles/theme-switcher.css"
+    />
 
     <ix-layout-grid>
       <ix-row>
