--- a/packages/html-test-app/src/preview-examples/map-navigation.html
+++ b/packages/html-test-app/src/preview-examples/map-navigation.html
@@ -11,10 +11,16 @@ LICENSE file in the root directory of this source tree.
 <html>
   <head>
     <title>Map navigation example</title>
-    <link rel="stylesheet" href="./example.css" />
   </head>
   <body class="theme-classic-dark">
     <!-- Preview code -->
+    <style>
+      ix-map-navigation {
+        width: 100vw;
+        height: 100vh;
+      }
+    </style>
+
     <ix-map-navigation
       application-name="Test Application"
       navigation-title="Some other content"
