fix: change html link position

--- a/packages/html-test-app/src/preview-examples/aggrid.html
+++ b/packages/html-test-app/src/preview-examples/aggrid.html
@@ -13,9 +13,7 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AgGrid example</title>
-  </head>
-  <body class="theme-classic-dark">
-    <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.js"></script>
+    <!-- Links -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/ag-grid-community/styles/ag-grid.css"
@@ -24,10 +22,10 @@ LICENSE file in the root directory of this source tree.
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/ag-grid-community/styles/ag-theme-alpine.css"
     />
-    <link
-      rel="stylesheet"
-      href="@siemens/ix-aggrid/dist/ix-aggrid/ix-aggrid.css"
-    />
+    <!-- Links -->
+  </head>
+  <body class="theme-classic-dark">
+    <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.js"></script>
     <!-- Preview code -->
     <div
       style="height: 12rem; width: 100%"
