--- a/packages/html-test-app/src/preview-examples/grid.html
+++ b/packages/html-test-app/src/preview-examples/grid.html
@@ -13,12 +13,14 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grid example</title>
-  </head>
-  <body class="theme-classic-dark">
+    <!-- Links -->
     <link
       rel="stylesheet"
       href="./styles/grid.css"
     />
+    <!-- Links -->
+  </head>
+  <body class="theme-classic-dark">
     <!-- Preview code -->
     <ix-layout-grid class="example-grid">
       <ix-row>
