--- a/packages/html-test-app/src/preview-examples/modal-sizes.html
+++ b/packages/html-test-app/src/preview-examples/modal-sizes.html
@@ -13,12 +13,14 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modal sizes example</title>
-  </head>
-  <body class="theme-classic-dark">
+    <!-- Links -->
     <link
       rel="stylesheet"
       href="./styles/modal-sizes.css"
     />
+    <!-- Links -->
+  </head>
+  <body class="theme-classic-dark">
     <!-- Preview code -->
     <div class="modal-sizes-example">
       <ix-button data-modal-size="360">Show modal size 360</ix-button>
