fix(toggle-button-secondary-outline): source code

--- a/packages/html-test-app/src/preview-examples/toggle-button-secondary-outline.html
+++ b/packages/html-test-app/src/preview-examples/toggle-button-secondary-outline.html
@@ -13,13 +13,15 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Toggle button secondary outline example</title>
-  </head>
-  <body class="theme-classic-dark">
+    <!-- Sources -->
     <style>
       ix-toggle-button {
         margin: 0.25rem;
       }
     </style>
+    <!-- Sources -->
+  </head>
+  <body class="theme-classic-dark">
     <!-- Preview code -->
     <div>
       <ix-toggle-button outline>Normal</ix-toggle-button>
