--- a/packages/documentation/static/code-runtime/html/src/index.html
+++ b/packages/documentation/static/code-runtime/html/src/index.html
@@ -1,1 +1,31 @@
-<!-- IX_INJECT_SOURCE_CODE -->
+<!--
+SPDX-FileCopyrightText: 2023 Siemens AG
+
+SPDX-License-Identifier: MIT
+
+This source code is licensed under the MIT license found in the
+LICENSE file in the root directory of this source tree.
+-->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Example</title>
+    <style>
+      body {
+        width: 100vw;
+        height: 100vh;
+      }
+    </style>
+    <!-- IX_INJECT_SOURCES -->
+  </head>
+  <body class="theme-classic-dark">
+    <!-- IX_INJECT_SOURCE_CODE -->
+    <script type="module" src="./main.js"></script>
+  </body>
+</html>
+
+
+
