fix: add comments html env index

--- a/packages/documentation/static/code-runtime/html/src/index.html
+++ b/packages/documentation/static/code-runtime/html/src/index.html
@@ -19,10 +19,14 @@ LICENSE file in the root directory of this source tree.
         height: 100vh;
       }
     </style>
+    <!-- Sources -->
     <!-- IX_INJECT_SOURCES -->
+    <!-- Sources -->
   </head>
   <body class="theme-classic-dark">
+    <!-- Preview code -->
     <!-- IX_INJECT_SOURCE_CODE -->
+    <!-- Preview code -->
     <script type="module" src="./main.js"></script>
   </body>
 </html>
