fix: html env placeholder logo implementation

--- a/packages/html-test-app/src/preview-examples/about-and-legal.html
+++ b/packages/html-test-app/src/preview-examples/about-and-legal.html
@@ -17,7 +17,7 @@ LICENSE file in the root directory of this source tree.
   <body class="theme-classic-dark">
     <!-- Preview code -->
     <ix-basic-navigation>
-      <placeholder-logo slot="logo"></placeholder-logo>
+      <div class="placeholder-logo" slot="logo"></div>
       <ix-menu>
         <ix-menu-about>
           <ix-menu-about-item label="Tab 1">Content 1</ix-menu-about-item>
