--- a/packages/html-test-app/src/preview-examples/map-navigation.html
+++ b/packages/html-test-app/src/preview-examples/map-navigation.html
@@ -20,7 +20,7 @@ LICENSE file in the root directory of this source tree.
       application-name="Test Application"
       navigation-title="Some other content"
     >
-      <placeholder-logo slot="logo"></placeholder-logo>
+      <div class="placeholder-logo" slot="logo"></div>
       <ix-menu>
         <ix-menu-item>Item 1</ix-menu-item>
         <ix-menu-item>Item 2</ix-menu-item>
