--- a/packages/html-test-app/src/preview-examples/basic-navigation.html
+++ b/packages/html-test-app/src/preview-examples/basic-navigation.html
@@ -17,7 +17,7 @@ LICENSE file in the root directory of this source tree.
   <body class="theme-classic-dark">
     <!-- Preview code -->
     <ix-basic-navigation application-name="Application name">
-      <placeholder-logo slot="logo"></placeholder-logo>
+      <div class="placeholder-logo" slot="logo"></div>
       <ix-menu>
         <ix-menu-item>Item 1</ix-menu-item>
         <ix-menu-item>Item 2</ix-menu-item>
