--- a/packages/html-test-app/src/preview-examples/settings.html
+++ b/packages/html-test-app/src/preview-examples/settings.html
@@ -17,7 +17,7 @@ LICENSE file in the root directory of this source tree.
   <body class="theme-classic-dark">
     <!-- Preview code -->
     <ix-basic-navigation>
-      <placeholder-logo slot="logo"></placeholder-logo>
+      <div class="placeholder-logo" slot="logo"></div>
       <ix-menu>
         <ix-menu-settings>
           <ix-menu-settings-item
