fix: update html example env

--- a/packages/html-test-app/src/preview-examples/dropdown-button.html
+++ b/packages/html-test-app/src/preview-examples/dropdown-button.html
@@ -15,7 +15,7 @@ LICENSE file in the root directory of this source tree.
     <title>Dropdown button example</title>
     <!-- Sources -->
     <style>
-      .example {
+      .dropdown-button {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -23,7 +23,7 @@ LICENSE file in the root directory of this source tree.
         max-width: 20rem;
       }
 
-      .example > ix-dropdown-button {
+      .dropdown-button > ix-dropdown-button {
         margin-bottom: 0.5rem;
       }
     </style>
@@ -31,7 +31,7 @@ LICENSE file in the root directory of this source tree.
   </head>
   <body class="theme-classic-dark">
     <!-- Preview code -->
-    <div class="example">
+    <div class="dropdown-button">
       <ix-dropdown-button label="Dropdown" icon="checkboxes">
         <ix-dropdown-item label="Item 1" value="1"></ix-dropdown-item>
         <ix-dropdown-item label="Item 2" value="2"></ix-dropdown-item>
