--- a/packages/html-test-app/src/preview-examples/tooltip-title.html
+++ b/packages/html-test-app/src/preview-examples/tooltip-title.html
@@ -12,7 +12,7 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <div style="padding: 4rem">
-      <ix-button data-tooltip="myTooltip">Hover or focus me</ix-button>
+      <ix-button data-tooltip="myTooltip">Hover me</ix-button>
       <ix-tooltip for="[data-tooltip='myTooltip']" title-content="My Tooltip">
         <ix-icon name="rocket" slot="title-icon"></ix-icon>
         Some example content
