--- a/packages/html-test-app/src/preview-examples/grid.html
+++ b/packages/html-test-app/src/preview-examples/grid.html
@@ -13,42 +13,38 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grid example</title>
-    <!-- Sources -->
-    <link
-      rel="stylesheet"
-      href="./styles/grid.css"
-    />
-    <!-- Sources -->
   </head>
   <body class="theme-classic-dark">
     <!-- Preview code -->
-    <ix-layout-grid class="example-grid">
-      <ix-row>
-        <ix-col><ix-typography format="display">1</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">2</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">3</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">4</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">5</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">6</ix-typography></ix-col>
-      </ix-row>
-    </ix-layout-grid>
+    <div class="grid">
+      <ix-layout-grid>
+        <ix-row>
+          <ix-col><ix-typography format="display">1</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">2</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">3</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">4</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">5</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">6</ix-typography></ix-col>
+        </ix-row>
+      </ix-layout-grid>
 
-    <ix-layout-grid class="example-grid">
-      <ix-row>
-        <ix-col><ix-typography format="display">1</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">2</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">3</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">4</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">5</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">6</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">7</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">8</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">9</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">10</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">11</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">12</ix-typography></ix-col>
-      </ix-row>
-    </ix-layout-grid>
+      <ix-layout-grid>
+        <ix-row>
+          <ix-col><ix-typography format="display">1</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">2</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">3</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">4</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">5</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">6</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">7</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">8</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">9</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">10</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">11</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">12</ix-typography></ix-col>
+        </ix-row>
+      </ix-layout-grid>
+    </div>
     <!-- Preview code -->
     <script type="module" src="./main.js"></script>
   </body>
