--- a/packages/html-test-app/src/preview-examples/radio-button.html
+++ b/packages/html-test-app/src/preview-examples/radio-button.html
@@ -13,22 +13,10 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Radio button example</title>
-    <!-- Sources -->
-    <style>
-      .example-list {
-        display: flex;
-        flex-direction: column;
-      }
-
-      .example-list > label {
-        margin-bottom: 0.5rem;
-      }
-    </style>
-    <!-- Sources -->
   </head>
   <body class="theme-classic-dark">
     <!-- Preview code -->
-    <div class="example-list">
+    <div class="radio-button">
       <input checked id="checkbox_1_1" name="group_1" type="radio" />
       <label for="checkbox_1_1"> Checked </label>
 
