--- a/packages/html-test-app/src/preview-examples/chip.html
+++ b/packages/html-test-app/src/preview-examples/chip.html
@@ -15,23 +15,13 @@ LICENSE file in the root directory of this source tree.
     <title>Chip example</title>
     <!-- Sources -->
     <style>
-      .example {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        position: relative;
-        max-width: 20rem;
-      }
 
-      .example > ix-chip {
-        margin-bottom: 0.5rem;
-      }
     </style>
     <!-- Sources -->
   </head>
   <body class="theme-classic-dark">
     <!-- Preview code -->
-    <div class="example">
+    <div class="chip">
       <ix-chip closable outline> Primary </ix-chip>
       <ix-chip icon="print">Primary with icon</ix-chip>
       <ix-chip icon="print" style="width: 10rem" closable> Primary </ix-chip>
