--- a/packages/html-test-app/src/preview-examples/dropdown-button-icon.html
+++ b/packages/html-test-app/src/preview-examples/dropdown-button-icon.html
@@ -13,26 +13,10 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dropdown button icon example</title>
-    <!-- Sources -->
-    <style>
-      .example {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        position: relative;
-        max-width: 20rem;
-      }
-
-      .example > ix-dropdown-button {
-        margin-bottom: 0.5rem;
-        margin-left: 0.5rem;
-      }
-    </style>
-    <!-- Sources -->
   </head>
   <body class="theme-classic-dark">
     <!-- Preview code -->
-    <div class="example">
+    <div class="dropdown-button">
       <ix-dropdown-button label="" icon="checkboxes">
         <ix-dropdown-item label="Item 1" value="1"></ix-dropdown-item>
         <ix-dropdown-item label="Item 2" value="2"></ix-dropdown-item>
