--- a/packages/html-test-app/src/preview-examples/echarts.html
+++ b/packages/html-test-app/src/preview-examples/echarts.html
@@ -24,7 +24,7 @@ LICENSE file in the root directory of this source tree.
     <!-- Preview code -->
     <div
       id="main"
-      style="display: block; position: relative; width: 100%; height: 40rem"
+      class="echarts"
     ></div>
 
     <script type="module">
