--- a/packages/html-test-app/src/preview-examples/flip-tile.html
+++ b/packages/html-test-app/src/preview-examples/flip-tile.html
@@ -13,27 +13,10 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flip tile example</title>
-    <!-- Sources -->
-    <style>
-      .example {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        position: relative;
-        margin-top: 2rem;
-        max-width: 100%;
-        flex-wrap: wrap;
-      }
-
-      .example > ix-flip-tile {
-        margin: 0 0.5rem 0.5rem 0;
-      }
-    </style>
-    <!-- Sources -->
   </head>
   <body class="theme-classic-dark">
     <!-- Preview code -->
-    <div class="example">
+    <div class="flip-tile">
       <ix-flip-tile>
         <div slot="header">Flip header</div>
 
