--- a/packages/html-test-app/src/preview-examples/grid-padding.html
+++ b/packages/html-test-app/src/preview-examples/grid-padding.html
@@ -13,18 +13,12 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grid padding example</title>
-    <!-- Sources -->
-    <link
-      rel="stylesheet"
-      href="./styles/grid.css"
-    />
-    <!-- Sources -->
   </head>
   <body class="theme-classic-dark">
     <!-- Preview code -->
-    <div class="example-parent">
+    <div class="grid">
       <h4>Grid with margin</h4>
-      <ix-layout-grid class="example-grid">
+      <ix-layout-grid>
         <ix-row>
           <ix-col><ix-typography format="display">1</ix-typography></ix-col>
           <ix-col><ix-typography format="display">2</ix-typography></ix-col>
@@ -42,7 +36,7 @@ LICENSE file in the root directory of this source tree.
       </ix-layout-grid>
 
       <h4>Grid without margin</h4>
-      <ix-layout-grid no-margin class="example-grid">
+      <ix-layout-grid no-margin>
         <ix-row>
           <ix-col><ix-typography format="display">1</ix-typography></ix-col>
           <ix-col><ix-typography format="display">2</ix-typography></ix-col>
