--- a/packages/html-test-app/src/preview-examples/grid-size.html
+++ b/packages/html-test-app/src/preview-examples/grid-size.html
@@ -13,46 +13,42 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grid size example</title>
-    <!-- Sources -->
-    <link
-      rel="stylesheet"
-      href="./styles/grid.css"
-    />
-    <!-- Sources -->
   </head>
   <body class="theme-classic-dark">
     <!-- Preview code -->
-    <h4>Column 6 takes up more space to a max of 12 columns total</h4>
-    <ix-layout-grid class="example-grid">
-      <ix-row>
-        <ix-col><ix-typography format="display">1</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">2</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">3</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">4</ix-typography></ix-col>
-        <ix-col><ix-typography format="display">5</ix-typography></ix-col>
-        <ix-col size="6"
-          ><ix-typography format="display">6</ix-typography></ix-col
-        >
-      </ix-row>
-    </ix-layout-grid>
+    <div class="grid">
+      <h4>Column 6 takes up more space to a max of 12 columns total</h4>
+      <ix-layout-grid>
+        <ix-row>
+          <ix-col><ix-typography format="display">1</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">2</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">3</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">4</ix-typography></ix-col>
+          <ix-col><ix-typography format="display">5</ix-typography></ix-col>
+          <ix-col size="6"
+            ><ix-typography format="display">6</ix-typography></ix-col
+          >
+        </ix-row>
+      </ix-layout-grid>
 
-    <h4>Stack columns on smaller screens</h4>
-    <ix-layout-grid class="example-grid">
-      <ix-row>
-        <ix-col size="12" size-md="3"
-          ><ix-typography format="display">1</ix-typography></ix-col
-        >
-        <ix-col size="12" size-md="3"
-          ><ix-typography format="display">2</ix-typography></ix-col
-        >
-        <ix-col size="12" size-md="3"
-          ><ix-typography format="display">3</ix-typography></ix-col
-        >
-        <ix-col size="12" size-md="3"
-          ><ix-typography format="display">4</ix-typography></ix-col
-        >
-      </ix-row>
-    </ix-layout-grid>
+      <h4>Stack columns on smaller screens</h4>
+      <ix-layout-grid>
+        <ix-row>
+          <ix-col size="12" size-md="3"
+            ><ix-typography format="display">1</ix-typography></ix-col
+          >
+          <ix-col size="12" size-md="3"
+            ><ix-typography format="display">2</ix-typography></ix-col
+          >
+          <ix-col size="12" size-md="3"
+            ><ix-typography format="display">3</ix-typography></ix-col
+          >
+          <ix-col size="12" size-md="3"
+            ><ix-typography format="display">4</ix-typography></ix-col
+          >
+        </ix-row>
+      </ix-layout-grid>
+    </div>
     <!-- Preview code -->
     <script type="module" src="./main.js"></script>
   </body>
