--- a/packages/html-test-app/src/preview-examples/kpi.html
+++ b/packages/html-test-app/src/preview-examples/kpi.html
@@ -15,23 +15,13 @@ LICENSE file in the root directory of this source tree.
     <title>Kpi example</title>
     <!-- Sources -->
     <style>
-      .example {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        position: relative;
-        max-width: 20rem;
-      }
 
-      .example > * {
-        margin: 0.5rem;
-      }
     </style>
     <!-- Sources -->
   </head>
   <body class="theme-classic-dark">
     <!-- Preview code -->
-    <div class="example">
+    <div class="kpi">
       <ix-kpi label="Motor speed" value="Nominal"></ix-kpi>
       <ix-kpi label="Motor speed" value="122.6" unit="rpm"></ix-kpi>
       <ix-kpi label="Motor speed" value="122.6" state="alarm"></ix-kpi>
