--- a/packages/html-test-app/src/preview-examples/modal-sizes.html
+++ b/packages/html-test-app/src/preview-examples/modal-sizes.html
@@ -13,16 +13,10 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modal sizes example</title>
-    <!-- Sources -->
-    <link
-      rel="stylesheet"
-      href="./styles/modal-sizes.css"
-    />
-    <!-- Sources -->
   </head>
   <body class="theme-classic-dark">
     <!-- Preview code -->
-    <div class="modal-sizes-example">
+    <div class="modal-sizes">
       <ix-button data-modal-size="360">Show modal size 360</ix-button>
       <ix-button data-modal-size="480">Show modal size 480</ix-button>
       <ix-button data-modal-size="600">Show modal size 600</ix-button>
