--- a/packages/html-test-app/src/preview-examples/tabs.html
+++ b/packages/html-test-app/src/preview-examples/tabs.html
@@ -13,27 +13,10 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tabs example</title>
-    <!-- Sources -->
-    <style>
-      .example {
-        display: block;
-        position: relative;
-        width: 100%;
-      }
-
-      div[data-tab-content] {
-        display: none;
-      }
-
-      div[data-tab-content].show {
-        display: block;
-      }
-    </style>
-    <!-- Sources -->
   </head>
   <body class="theme-classic-dark">
     <!-- Preview code -->
-    <div class="example">
+    <div class="tabs">
       <ix-tabs>
         <ix-tab-item data-tab-id="0">Tab 1</ix-tab-item>
         <ix-tab-item data-tab-id="1">Tab 2</ix-tab-item>
