fix(button-ghost): remove unnecessary variant

--- a/packages/html-test-app/src/preview-examples/button-ghost.html
+++ b/packages/html-test-app/src/preview-examples/button-ghost.html
@@ -17,8 +17,8 @@ LICENSE file in the root directory of this source tree.
   <body class="theme-classic-dark">
     <!-- Preview code -->
     <div>
-      <ix-button class="m-1" ghost variant="primary"> Button </ix-button>
-      <ix-button class="m-1" disabled ghost variant="primary">
+      <ix-button class="m-1" ghost> Button </ix-button>
+      <ix-button class="m-1" disabled ghost>
         Button
       </ix-button>
     </div>
