fix: use current theme StackBlitz

--- a/packages/documentation/static/code-runtime/react/public/index.html
+++ b/packages/documentation/static/code-runtime/react/public/index.html
@@ -8,4 +8,6 @@ LICENSE file in the root directory of this source tree.
 -->
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<div id="root"></div>
+<body class="theme-brand-dark">
+  <div id="root"></div>
+</body>
