--- a/packages/documentation/static/code-runtime/angular/src/index.html
+++ b/packages/documentation/static/code-runtime/angular/src/index.html
@@ -16,7 +16,7 @@ LICENSE file in the root directory of this source tree.
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="theme-brand-dark">
   <app-root></app-root>
 </body>
 </html>
