fix(theme-switcher): false theme

--- a/packages/html-test-app/src/preview-examples/theme-switcher.html
+++ b/packages/html-test-app/src/preview-examples/theme-switcher.html
@@ -47,7 +47,7 @@ LICENSE file in the root directory of this source tree.
       import { themeSwitcher } from '@siemens/ix';
 
       (async function () {
-        const themes = ['theme-classic-light', 'theme-brand-dark'];
+        const themes = ['theme-classic-light', 'theme-classic-dark'];
         let selectedTheme = themes[1];
 
         setTimeout(() => {
