test(core/date-components): fix/add VRTs

--- a/packages/core/src/tests/date-input/range/index.html
+++ b/packages/core/src/tests/date-input/range/index.html
@@ -22,7 +22,11 @@ SPDX-License-Identifier: MIT
         margin-top: 2rem;
       "
     >
-      <ix-date-input from="2023/01/01" to="2023/01/06"></ix-date-input>
+      <ix-date-input
+        from="2023/01/01"
+        to="2023/01/06"
+        range="true"
+      ></ix-date-input>
     </div>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
