--- a/packages/core/src/tests/date-input/basic/index.html
+++ b/packages/core/src/tests/date-input/basic/index.html
@@ -22,7 +22,7 @@ SPDX-License-Identifier: MIT
         margin-top: 2rem;
       "
     >
-      <ix-date-input from="2023/01/01" range="false"></ix-date-input>
+      <ix-date-input from="2023/01/01"></ix-date-input>
     </div>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
