--- a/packages/core/src/tests/date-input/label-position/index.html
+++ b/packages/core/src/tests/date-input/label-position/index.html
@@ -17,16 +17,15 @@ SPDX-License-Identifier: MIT
     <div
       style="
         display: flex;
+        flex-direction: column;
         justify-content: center;
         position: relative;
         margin-top: 2rem;
       "
     >
-      <ix-date-picker-rework
-        from="1990/03/29"
-        min-date="1990/03/05"
-        max-date="1990/03/30"
-      ></ix-date-picker-rework>
+      <ix-date-input label="test" label-position="top"></ix-date-input>
+      <ix-date-input label="test" label-position="left"></ix-date-input>
+      <ix-date-input label="test" label-position="inside"></ix-date-input>
     </div>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
