--- a/packages/core/src/tests/date-picker-rework/range/index.html
+++ b/packages/core/src/tests/date-picker-rework/range/index.html
@@ -23,7 +23,7 @@ SPDX-License-Identifier: MIT
       "
     >
       <ix-date-picker-rework
-        range
+        range="true"
         from="1990/03/10"
         to="1990/03/29"
         min-date="1990/03/05"
