--- a/packages/core/src/tests/datetime-input/disabled/index.html
+++ b/packages/core/src/tests/datetime-input/disabled/index.html
@@ -22,11 +22,11 @@ SPDX-License-Identifier: MIT
         margin-top: 2rem;
       "
     >
-      <ix-date-picker-rework
-        from="1990/03/29"
-        min-date="1990/03/05"
-        max-date="1990/03/30"
-      ></ix-date-picker-rework>
+      <ix-datetime-input
+        from-date="2023/01/01"
+        from-time="23:23:23"
+        disabled="true"
+      ></ix-datetime-input>
     </div>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
