--- a/packages/core/src/tests/datetime-input/range/index.html
+++ b/packages/core/src/tests/datetime-input/range/index.html
@@ -27,6 +27,7 @@ SPDX-License-Identifier: MIT
         from-time="12:34:56"
         to-date="2023/01/06"
         to-time="12:34:56"
+        range="true"
       ></ix-datetime-input>
     </div>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
