fix(core/pill): fix custom outline variant and add variant examples to documentation

--- a/packages/core/src/tests/pill/basic/index.html
+++ b/packages/core/src/tests/pill/basic/index.html
@@ -28,7 +28,7 @@ SPDX-License-Identifier: MIT
         Primary
       </ix-pill>
 
-      <ix-pill variant="critical" outline> Alarm </ix-pill>
+      <ix-pill variant="critical" outline> Critical </ix-pill>
       <ix-pill variant="alarm" icon="print"> Alarm with icon </ix-pill>
       <ix-pill
         variant="alarm"
@@ -44,7 +44,7 @@ SPDX-License-Identifier: MIT
         style="width: 10rem"
         onClose="{console.log}"
       >
-        Alarm
+        Warning
       </ix-pill>
       <ix-pill
         background="purple"
@@ -53,6 +53,18 @@ SPDX-License-Identifier: MIT
         icon="print"
         style="width: 10rem"
         onClose="{console.log}"
+      >
+        Custom
+      </ix-pill>
+
+      <ix-pill
+        background="purple"
+        color="green"
+        variant="custom"
+        icon="print"
+        style="width: 10rem"
+        onClose="{console.log}"
+        outline
       >
         Custom
       </ix-pill>
@@ -77,7 +89,7 @@ SPDX-License-Identifier: MIT
         Primary
       </ix-pill>
 
-      <ix-pill align-left variant="critical" outline> Alarm </ix-pill>
+      <ix-pill align-left variant="critical" outline> Critical </ix-pill>
       <ix-pill align-left variant="alarm" icon="print">
         Alarm with icon
       </ix-pill>
@@ -107,6 +119,19 @@ SPDX-License-Identifier: MIT
         icon="print"
         style="width: 10rem"
         onClose="{console.log}"
+      >
+        Custom
+      </ix-pill>
+
+      <ix-pill
+        align-left
+        background="purple"
+        color="green"
+        variant="custom"
+        icon="print"
+        style="width: 10rem"
+        onClose="{console.log}"
+        outline
       >
         Custom
       </ix-pill>
