--- a/packages/html-test-app/src/preview-examples/aggrid.html
+++ b/packages/html-test-app/src/preview-examples/aggrid.html
@@ -14,6 +14,7 @@ LICENSE file in the root directory of this source tree.
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AG Grid example</title>
     <!-- Sources -->
+    <style src="../../../styles/aggrid.css"></style>
     <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.js"></script>
     <!-- Sources -->
   </head>
