--- a/packages/html-test-app/src/preview-examples/icon-toggle-button-secondary-ghost.html
+++ b/packages/html-test-app/src/preview-examples/icon-toggle-button-secondary-ghost.html
@@ -13,6 +13,9 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Icon toggle button secondary ghost example</title>
+    <!-- Sources -->
+    <style src="../../../styles/icon-toggle-button.css"></style>
+    <!-- Sources -->
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
