--- a/packages/html-test-app/src/preview-examples/pill-variants.html
+++ b/packages/html-test-app/src/preview-examples/pill-variants.html
@@ -13,11 +13,9 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pill variant examples</title>
-    <style>
-      ix-pill {
-        min-width: 7rem;
-      }
-    </style>
+    <!-- Sources -->
+    <style src="../../../styles/pill-variants.css"></style>
+    <!-- Sources -->
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
