--- a/packages/html-test-app/src/preview-examples/icon-toggle-button-primary-ghost.html
+++ b/packages/html-test-app/src/preview-examples/icon-toggle-button-primary-ghost.html
@@ -14,7 +14,9 @@ LICENSE file in the root directory of this source tree.
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Icon toggle button primary ghost example</title>
     <!-- Sources -->
-    <style src="../../../styles/icon-toggle-button.css"></style>
+    <script type="module">
+      import '../../../styles/icon-toggle-button.css';
+    </script>
     <!-- Sources -->
   </head>
   <body class="theme-brand-dark">
