--- a/packages/html-test-app/src/preview-examples/pill-variants.html
+++ b/packages/html-test-app/src/preview-examples/pill-variants.html
@@ -14,7 +14,9 @@ LICENSE file in the root directory of this source tree.
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pill variant examples</title>
     <!-- Sources -->
-    <style src="../../../styles/pill-variants.css"></style>
+    <script type="module">
+      import '../../../styles/pill-variants.css';
+    </script>
     <!-- Sources -->
   </head>
   <body class="theme-brand-dark">
