--- a/packages/core/src/tests/time-picker-rework/basic/index.html
+++ b/packages/core/src/tests/time-picker-rework/basic/index.html
@@ -34,7 +34,7 @@ SPDX-License-Identifier: MIT
       <ix-time-picker-rework
         style="width: min-content"
         time="10:11:12 AM"
-        format="hh:mm:ss A"
+        format="hh:mm:ss a"
       ></ix-time-picker-rework>
     </div>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
