--- a/packages/core/src/tests/time-picker-rework/basic/index.html
+++ b/packages/core/src/tests/time-picker-rework/basic/index.html
@@ -29,8 +29,8 @@ SPDX-License-Identifier: MIT
     >
       <ix-time-picker style="width: min-content" time="10:11:12"></ix-time-picker>
       <ix-time-picker style="width: min-content" time="10:11:12" show-minutes="false" show-seconds="false"></ix-time-picker>
-      <ix-time-picker style="width: min-content" time="10:11:12" show-hours="false" show-seconds="false"></ix-time-picker>
-      <ix-time-picker style="width: min-content" time="10:11:12" show-hours="false" show-minutes="false"></ix-time-picker>
+      <ix-time-picker style="width: min-content" time="10:11:12" show-hour="false" show-seconds="false"></ix-time-picker>
+      <ix-time-picker style="width: min-content" time="10:11:12" show-hour="false" show-minutes="false"></ix-time-picker>
       <ix-time-picker
         style="width: min-content"
         time="10:11:12 AM"
