--- a/packages/html-test-app/src/preview-examples/application-breakpoints.html
+++ b/packages/html-test-app/src/preview-examples/application-breakpoints.html
@@ -41,20 +41,40 @@ SPDX-License-Identifier: MIT
       <label for="large">Large</label>
     </div>
     <div class="content">
-      <ix-basic-navigation application-name="Application name">
-        <placeholder-logo slot="logo"></placeholder-logo>
+      <ix-application application-name="Application name">
+        <ix-application-header name="My Application">
+          <placeholder-logo slot="logo"></placeholder-logo>
+
+          <ix-dropdown-button variant="secondary" label="Select config" ghost>
+            <ix-dropdown-item label="Config 1"></ix-dropdown-item>
+            <ix-dropdown-item label="Config 2"></ix-dropdown-item>
+            <ix-dropdown-item label="Config 3"></ix-dropdown-item>
+          </ix-dropdown-button>
+
+          <ix-avatar>
+            <ix-dropdown-item label="Action 1"></ix-dropdown-item>
+            <ix-dropdown-item label="Action 2"></ix-dropdown-item>
+            <ix-dropdown-item label="Action 3"></ix-dropdown-item>
+          </ix-avatar>
+        </ix-application-header>
         <ix-menu>
           <ix-menu-item>Item 1</ix-menu-item>
           <ix-menu-item>Item 2</ix-menu-item>
         </ix-menu>
-        <main>Some example content</main>
-      </ix-basic-navigation>
+        <ix-content>
+          <ix-content-header
+            slot="header"
+            header-title="My Content Page"
+          >
+          </ix-content-header>
+        </ix-content>
+      </ix-application>
     </div>
     <!-- Preview code -->
     <script type="module">
       (async () => {
-        await window.customElements.whenDefined('ix-basic-navigation');
-        const nav = document.querySelector('ix-basic-navigation');
+        await window.customElements.whenDefined('ix-application');
+        const nav = document.querySelector('ix-application');
         nav.breakpoints = ['md'];
 
         const radioButtons = document.querySelectorAll('input[type="radio"]');
