--- a/packages/html-test-app/src/preview-examples/application-header.html
+++ b/packages/html-test-app/src/preview-examples/application-header.html
@@ -11,6 +11,10 @@ SPDX-License-Identifier: MIT
       <ix-application-header name="My Application">
         <placeholder-logo slot="logo"></placeholder-logo>
 
+        <ix-icon-button ghost icon="checkboxes"></ix-icon-button>
+        <ix-icon-button ghost icon="checkboxes"></ix-icon-button>
+        <ix-icon-button ghost icon="checkboxes"></ix-icon-button>
+
         <ix-dropdown-button variant="secondary" label="Select config" ghost>
           <ix-dropdown-item label="Config 1"></ix-dropdown-item>
           <ix-dropdown-item label="Config 2"></ix-dropdown-item>
