--- a/packages/angular-test-app/src/preview-examples/menu-category.html
+++ b/packages/angular-test-app/src/preview-examples/menu-category.html
@@ -1,4 +1,4 @@
-<ix-basic-navigation>
+<ix-application>
   <ix-menu>
     <ix-menu-item home icon="home">Home</ix-menu-item>
     <ix-menu-item icon="globe">Normal Tab</ix-menu-item>
@@ -7,4 +7,4 @@
       <ix-menu-item icon="globe">Nested Tab</ix-menu-item>
     </ix-menu-category>
   </ix-menu>
-</ix-basic-navigation>
+</ix-application>
