--- a/packages/html-test-app/src/preview-examples/settings.html
+++ b/packages/html-test-app/src/preview-examples/settings.html
@@ -11,8 +11,10 @@ SPDX-License-Identifier: MIT
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <ix-basic-navigation>
-      <placeholder-logo slot="logo"></placeholder-logo>
+    <ix-application>
+      <ix-application-header>
+        <placeholder-logo slot="logo"></placeholder-logo>
+      </ix-application-header>
       <ix-menu>
         <ix-menu-settings>
           <ix-menu-settings-item
@@ -23,7 +25,7 @@ SPDX-License-Identifier: MIT
           ></ix-menu-settings-item>
         </ix-menu-settings>
       </ix-menu>
-    </ix-basic-navigation>
+    </ix-application>
     <script>
       (async function () {
         await window.customElements.whenDefined('ix-menu');
