--- a/packages/core/src/tests/side-pane/inline-expanded/index.html
+++ b/packages/core/src/tests/side-pane/inline-expanded/index.html
@@ -26,7 +26,7 @@
       <ix-menu-item icon="globe">Nested Tab</ix-menu-item>
     </ix-menu-category>
   </ix-menu>
-  <ix-side-pane-group floating="true">
+  <ix-side-pane-group inline>
     <ix-side-pane paneTitle="TOP" slot="top" expand-pane="true">
       <h1>Test Heading</h1>
       <p>This is a test content with a button</p>
