docs: add angular examples

--- a/packages/html-test-app/src/preview-examples/application-app-switch.html
+++ b/packages/html-test-app/src/preview-examples/application-app-switch.html
@@ -27,7 +27,7 @@ SPDX-License-Identifier: MIT
     <script type="module">
       const application = document.querySelector('ix-application');
       application.appSwitchConfig = {
-        textAppSwitch: 'Switch to Application',
+        i18nAppSwitch: 'Switch to Application',
         currentAppId: 'demo-app-2',
         apps: [
           {
