docs: add react examples

--- a/packages/html-test-app/src/preview-examples/application-breakpoints.html
+++ b/packages/html-test-app/src/preview-examples/application-breakpoints.html
@@ -34,7 +34,7 @@ SPDX-License-Identifier: MIT
       <ix-content>
         <ix-content-header
           slot="header"
-          header-title="My Content Page"
+          header-title="Choose breakpoint"
         >
           <input id="small" type="radio" name="layout" value="sm" />
           <label for="small">Small</label>
