feat(core/avatar): add user-info to dropdown

--- a/packages/angular-test-app/src/preview-examples/application-header.html
+++ b/packages/angular-test-app/src/preview-examples/application-header.html
@@ -11,9 +11,8 @@
     <ix-dropdown-item label="Config 3"></ix-dropdown-item>
   </ix-dropdown-button>
 
-  <ix-avatar>
+  <ix-avatar username="John Doe" extra="Administrator">
     <ix-dropdown-item label="Action 1"></ix-dropdown-item>
     <ix-dropdown-item label="Action 2"></ix-dropdown-item>
-    <ix-dropdown-item label="Action 3"></ix-dropdown-item>
   </ix-avatar>
 </ix-application-header>
