--- a/packages/core/src/tests/panes/inline-expanded/index.html
+++ b/packages/core/src/tests/panes/inline-expanded/index.html
@@ -26,20 +26,20 @@
       <ix-menu-item icon="globe">Nested Tab</ix-menu-item>
     </ix-menu-category>
   </ix-menu>
-  <ix-side-pane-group floating="true">
-    <ix-side-pane paneTitle="TOP" slot="top" expand-pane="true">
+  <ix-panes inline>
+    <ix-pane paneTitle="TOP" slot="top" expand-pane="true">
       <h1>Test Heading</h1>
       <p>This is a test content with a button</p>
       <ix-button>PUSH ME</ix-button>
-    </ix-side-pane>
-    <ix-side-pane paneTitle="LEFT" slot="left" expand-pane="true">
+    </ix-pane>
+    <ix-pane paneTitle="LEFT" slot="left" expand="true">
       <h1>Test Heading</h1>
       <p>This is a test content with a button</p>
       <ix-button>PUSH ME</ix-button>
-    </ix-side-pane>
-    <ix-side-pane paneTitle="RIGHT" slot="right" expand-pane="true"></ix-side-pane>
-    <ix-side-pane paneTitle="BOTTOM" slot="bottom" expand-pane="true"></ix-side-pane>
-    <ix-side-pane-content-area slot="content">
+    </ix-pane>
+    <ix-pane icon="about" paneTitle="RIGHT" slot="right" expand="true"></ix-pane>
+    <ix-pane paneTitle="BOTTOM" slot="bottom" expand="true"></ix-pane>
+    <div slot="content">
       <h1>Test Heading</h1>
       <h1>Test Heading</h1>
       <h1>Test Heading</h1>
@@ -47,8 +47,8 @@
       <h1>Test Heading</h1>
       <p>This is a test content with a button</p>
       <ix-button>PUSH ME</ix-button>
-    </ix-side-pane-content-area>
-  </ix-side-pane-group>
+    </div>
+  </ix-panes>
 </ix-basic-navigation>
 <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
 </body>
