--- a/packages/html-test-app/src/preview-examples/panes-floating.html
+++ b/packages/html-test-app/src/preview-examples/panes-floating.html
@@ -18,15 +18,15 @@
   <!--Preview code-->
   <div>
     <div>
-      <ix-side-pane-group inline>
-        <ix-side-pane paneTitle="TOP" slot="top"> </ix-side-pane>
-        <ix-side-pane paneTitle="LEFT" slot="left"> </ix-side-pane>
-        <ix-side-pane paneTitle="RIGHT" slot="right" showPreviewContent="true"></ix-side-pane>
-        <ix-side-pane paneTitle="BOTTOM" slot="bottom"></ix-side-pane>
-        <ix-side-pane-content-area slot="content">
+      <ix-panes inline>
+        <ix-pane paneTitle="TOP" slot="top"> </ix-pane>
+        <ix-pane paneTitle="LEFT" slot="left"> </ix-pane>
+        <ix-pane paneTitle="RIGHT" slot="right"></ix-pane>
+        <ix-pane paneTitle="BOTTOM" slot="bottom"></ix-pane>
+        <div slot="content">
           <p>This is a text content.</p>
-        </ix-side-pane-content-area>
-      </ix-side-pane-group>
+        </div>
+      </ix-panes>
     </div>
   </div>
 
