fix(core/side-pane): adapted preview examples

--- a/packages/angular-test-app/src/preview-examples/panes-floating.html
+++ b/packages/angular-test-app/src/preview-examples/panes-floating.html
@@ -5,7 +5,7 @@
     <ix-pane paneTitle="RIGHT" slot="right"></ix-pane>
     <ix-pane paneTitle="BOTTOM" slot="bottom"></ix-pane>
     <div slot="content">
-      <ix-button (click)="handleClick()">Toggle Left Pane</ix-button>
+      <ix-button (click)="handleButtonClick()">Toggle Left Pane</ix-button>
     </div>
   </ix-panes>
 </div>
