--- a/packages/angular-test-app/src/preview-examples/panes-inline.html
+++ b/packages/angular-test-app/src/preview-examples/panes-inline.html
@@ -1,5 +1,5 @@
 <div>
-  <ix-panes inline>
+  <ix-panes variant="full-height-left-right" behaviour="inline">
     <ix-pane paneTitle="TOP" slot="top"> </ix-pane>
     <ix-pane paneTitle="LEFT" slot="left"> </ix-pane>
     <ix-pane paneTitle="RIGHT" slot="right"></ix-pane>
