--- a/packages/html-test-app/src/preview-examples/panes-inline.html
+++ b/packages/html-test-app/src/preview-examples/panes-inline.html
@@ -17,7 +17,7 @@
 <body>
   <!--Preview code-->
   <div>
-    <ix-panes inline variant="2">
+    <ix-panes variant="full-height-left-right" behaviour="inline">
       <ix-pane paneTitle="TOP" slot="top"> </ix-pane>
       <ix-pane #leftPaneRef paneTitle="LEFT" slot="left"> </ix-pane>
       <ix-pane paneTitle="RIGHT" slot="right"></ix-pane>
